@@ -1,21 +1,25 @@
 package backend.mulkkam.intake.service;
 
 import static backend.mulkkam.common.exception.errorCode.BadRequestErrorCode.INVALID_DATE_FOR_DELETE_INTAKE_HISTORY;
+import static backend.mulkkam.common.exception.errorCode.ForbiddenErrorCode.NOT_PERMITTED_FOR_CUP;
 import static backend.mulkkam.common.exception.errorCode.ForbiddenErrorCode.NOT_PERMITTED_FOR_INTAKE_HISTORY;
-import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_INTAKE_HISTORY;
+import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_CUP;
 import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_INTAKE_HISTORY_DETAIL;
 import static backend.mulkkam.common.exception.errorCode.NotFoundErrorCode.NOT_FOUND_MEMBER;
 
 import backend.mulkkam.common.dto.MemberDetails;
 import backend.mulkkam.common.exception.CommonException;
+import backend.mulkkam.cup.domain.Cup;
+import backend.mulkkam.cup.repository.CupRepository;
 import backend.mulkkam.intake.domain.CommentOfAchievementRate;
 import backend.mulkkam.intake.domain.IntakeHistory;
 import backend.mulkkam.intake.domain.IntakeHistoryDetail;
 import backend.mulkkam.intake.domain.vo.AchievementRate;
-import backend.mulkkam.intake.dto.CreateIntakeHistoryResponse;
+import backend.mulkkam.intake.dto.CreateIntakeHistoryDetailResponse;
+import backend.mulkkam.intake.dto.request.CreateIntakeHistoryDetailByCupRequest;
+import backend.mulkkam.intake.dto.request.CreateIntakeHistoryDetailByUserInputRequest;
 import backend.mulkkam.intake.dto.request.DateRangeRequest;
-import backend.mulkkam.intake.dto.request.IntakeDetailCreateRequest;
-import backend.mulkkam.intake.dto.response.IntakeDetailResponse;
+import backend.mulkkam.intake.dto.response.IntakeHistoryDetailResponse;
 import backend.mulkkam.intake.dto.response.IntakeHistorySummaryResponse;
 import backend.mulkkam.intake.repository.IntakeHistoryDetailRepository;
 import backend.mulkkam.intake.repository.IntakeHistoryRepository;
@@ -23,12 +27,15 @@ import backend.mulkkam.intake.repository.TargetAmountSnapshotRepository;
 import backend.mulkkam.member.domain.Member;
 import backend.mulkkam.member.domain.vo.TargetAmount;
 import backend.mulkkam.member.repository.MemberRepository;
-import java.time.LocalDate;
-import java.util.Comparator;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDate;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -39,44 +46,55 @@ public class IntakeHistoryService {
     private final MemberRepository memberRepository;
     private final TargetAmountSnapshotRepository targetAmountSnapshotRepository;
     private final IntakeHistoryDetailRepository intakeHistoryDetailRepository;
+    private final CupRepository cupRepository;
 
     @Transactional
-    public CreateIntakeHistoryResponse create(
-            IntakeDetailCreateRequest intakeDetailCreateRequest,
+    public CreateIntakeHistoryDetailResponse createByCup(
+            CreateIntakeHistoryDetailByCupRequest createIntakeHistoryDetailByCupRequest,
             MemberDetails memberDetails
     ) {
-        LocalDate intakeDate = intakeDetailCreateRequest.dateTime().toLocalDate();
+        LocalDate intakeDate = createIntakeHistoryDetailByCupRequest.dateTime().toLocalDate();
         Member member = getMember(memberDetails.id());
 
-        IntakeHistory intakeHistory = findIntakeHistory(member, intakeDate);
-        IntakeHistoryDetail intakeHistoryDetail = intakeDetailCreateRequest.toIntakeDetail(intakeHistory);
-        intakeHistoryDetailRepository.save(intakeHistoryDetail);
+        IntakeHistory intakeHistory = getIntakeHistory(member, intakeDate);
 
-        List<IntakeHistoryDetail> intakeHistoryDetails = findIntakeHistoriesOfDate(intakeDate, member);
-
-        if (intakeHistoryDetails.isEmpty()) {
-            return new CreateIntakeHistoryResponse(0, CommentOfAchievementRate.VERY_LOW.getComment());
+        Cup cup = getCup(createIntakeHistoryDetailByCupRequest.cupId());
+        if (!cup.isOwnedBy(member)) {
+            throw new CommonException(NOT_PERMITTED_FOR_CUP);
         }
 
-        int totalIntakeAmount = calculateTotalIntakeAmount(intakeHistoryDetails);
-        AchievementRate achievementRate = new AchievementRate(totalIntakeAmount, intakeHistory.getTargetAmount());
-        String commentByAchievementRate = CommentOfAchievementRate.findCommentByAchievementRate(achievementRate);
-
-        return new CreateIntakeHistoryResponse(achievementRate.value(), commentByAchievementRate);
+        IntakeHistoryDetail intakeHistoryDetail = createIntakeHistoryDetailByCupRequest.toIntakeDetail(
+                intakeHistory,
+                cup
+        );
+        intakeHistoryDetailRepository.save(intakeHistoryDetail);
+        return getCreateIntakeHistoryResponse(
+                intakeDate,
+                member,
+                intakeHistory,
+                intakeHistoryDetail.getIntakeAmount().value()
+        );
     }
 
-    private IntakeHistory findIntakeHistory(Member member, LocalDate intakeDate) {
-        return intakeHistoryRepository.findByMemberAndHistoryDate(member, intakeDate)
-                .orElseGet(() -> {
-                    int streak = findStreak(member, intakeDate);
-                    IntakeHistory newIntakeHistory = new IntakeHistory(
-                            member,
-                            intakeDate,
-                            member.getTargetAmount(),
-                            streak
-                    );
-                    return intakeHistoryRepository.save(newIntakeHistory);
-                });
+    @Transactional
+    public CreateIntakeHistoryDetailResponse createByUserInput(
+            CreateIntakeHistoryDetailByUserInputRequest createIntakeHistoryDetailByUserInputRequest,
+            MemberDetails memberDetails
+    ) {
+        LocalDate intakeDate = createIntakeHistoryDetailByUserInputRequest.dateTime().toLocalDate();
+        Member member = getMember(memberDetails.id());
+
+        IntakeHistory intakeHistory = getIntakeHistory(member, intakeDate);
+
+        IntakeHistoryDetail intakeHistoryDetail = createIntakeHistoryDetailByUserInputRequest.toIntakeDetail(
+                intakeHistory);
+        intakeHistoryDetailRepository.save(intakeHistoryDetail);
+        return getCreateIntakeHistoryResponse(
+                intakeDate,
+                member,
+                intakeHistory,
+                intakeHistoryDetail.getIntakeAmount().value()
+        );
     }
 
     public List<IntakeHistorySummaryResponse> readSummaryOfIntakeHistories(
@@ -85,25 +103,44 @@ public class IntakeHistoryService {
     ) {
         Member member = getMember(memberDetails.id());
         List<LocalDate> dates = dateRangeRequest.getAllDatesInRange();
-        List<IntakeHistoryDetail> details = intakeHistoryDetailRepository.findAllByMemberAndDateRange(
+
+        Map<LocalDate, IntakeHistory> histories = intakeHistoryRepository
+                .findAllByMemberAndHistoryDateBetween(member, dateRangeRequest.from(), dateRangeRequest.to())
+                .stream()
+                .collect(Collectors.toMap(
+                        IntakeHistory::getHistoryDate,
+                        history -> history
+                ));
+
+        List<IntakeHistoryDetail> allDetails = intakeHistoryDetailRepository.findAllByMemberAndDateRange(
                 member,
                 dateRangeRequest.from(),
                 dateRangeRequest.to()
         );
+
+        Map<LocalDate, List<IntakeHistoryDetail>> details = allDetails.stream()
+                .collect(Collectors.groupingBy(
+                        d -> d.getIntakeHistory().getHistoryDate()
+                ));
         return dates.stream()
                 .map(date -> {
-                    List<IntakeHistoryDetail> detailsOfDate = details.stream()
-                            .filter(detail -> detail.getIntakeHistory().getHistoryDate().equals(date))
+                    List<IntakeHistoryDetail> detailsOfDate = details.getOrDefault(date, List.of())
+                            .stream()
                             .sorted(Comparator.comparing(IntakeHistoryDetail::getIntakeTime).reversed())
                             .toList();
+
+                    IntakeHistory historyOnly = histories.get(date);
                     if (detailsOfDate.isEmpty()) {
-                        return createDefaultResponse(date, member);
+                        if (historyOnly == null) {
+                            return createDefaultResponse(date, member);
+                        }
+                        return toIntakeHistorySummaryResponse(historyOnly, List.of());
                     }
-                    IntakeHistory intakeHistory = detailsOfDate.getFirst().getIntakeHistory();
-                    return toIntakeHistorySummaryResponse(intakeHistory, detailsOfDate);
+                    return toIntakeHistorySummaryResponse(historyOnly, detailsOfDate);
                 })
                 .toList();
     }
+
 
     @Transactional
     public void deleteDetailHistory(
@@ -116,14 +153,38 @@ public class IntakeHistoryService {
 
         validatePossibleToDelete(intakeHistoryDetail, member);
         intakeHistoryDetailRepository.delete(intakeHistoryDetail);
+    }
 
-        List<IntakeHistoryDetail> intakeHistoryDetails = intakeHistoryDetailRepository.findAllByMemberAndDateRange(
-                member, LocalDate.now(), LocalDate.now());
-        if (intakeHistoryDetails.isEmpty()) {
-            IntakeHistory intakeHistory = intakeHistoryRepository.findByMemberAndHistoryDate(member, LocalDate.now())
-                    .orElseThrow(() -> new CommonException(NOT_FOUND_INTAKE_HISTORY));
-            intakeHistoryRepository.delete(intakeHistory);
-        }
+    private CreateIntakeHistoryDetailResponse getCreateIntakeHistoryResponse(
+            LocalDate intakeDate,
+            Member member,
+            IntakeHistory intakeHistory,
+            int intakeAmount
+    ) {
+        List<IntakeHistoryDetail> intakeHistoryDetails = findIntakeHistoriesOfDate(intakeDate, member);
+
+        int totalIntakeAmount = calculateTotalIntakeAmount(intakeHistoryDetails);
+        AchievementRate achievementRate = new AchievementRate(totalIntakeAmount, intakeHistory.getTargetAmount());
+        String commentByAchievementRate = CommentOfAchievementRate.findCommentByAchievementRate(achievementRate);
+
+        return new CreateIntakeHistoryDetailResponse(achievementRate.value(), commentByAchievementRate, intakeAmount);
+    }
+
+    private IntakeHistory getIntakeHistory(
+            Member member,
+            LocalDate intakeDate
+    ) {
+        return intakeHistoryRepository.findByMemberAndHistoryDate(member, intakeDate)
+                .orElseGet(() -> {
+                    int streak = findStreak(member, intakeDate);
+                    IntakeHistory newIntakeHistory = new IntakeHistory(
+                            member,
+                            intakeDate,
+                            member.getTargetAmount(),
+                            streak
+                    );
+                    return intakeHistoryRepository.save(newIntakeHistory);
+                });
     }
 
     private void validatePossibleToDelete(
@@ -169,7 +230,7 @@ public class IntakeHistoryService {
             IntakeHistory intakeHistory,
             List<IntakeHistoryDetail> intakeDetailsOfDate
     ) {
-        List<IntakeDetailResponse> intakeDetailResponses = toIntakeDetailResponses(intakeDetailsOfDate);
+        List<IntakeHistoryDetailResponse> intakeHistoryDetailResponse = toIntakeDetailResponses(intakeDetailsOfDate);
 
         int totalIntakeAmount = calculateTotalIntakeAmount(intakeDetailsOfDate);
 
@@ -185,13 +246,14 @@ public class IntakeHistoryService {
                 totalIntakeAmount,
                 achievementRate.value(),
                 intakeHistory.getStreak(),
-                intakeDetailResponses
+                intakeHistoryDetailResponse
         );
     }
 
-    private List<IntakeDetailResponse> toIntakeDetailResponses(List<IntakeHistoryDetail> intakeDetails) {
+    private List<IntakeHistoryDetailResponse> toIntakeDetailResponses(List<IntakeHistoryDetail> intakeDetails) {
         return intakeDetails.stream()
-                .map(IntakeDetailResponse::new).toList();
+                .map(IntakeHistoryDetailResponse::new)
+                .collect(Collectors.toList());
     }
 
     private IntakeHistoryDetail findIntakeHistoryDetailByIdWithHistoryAndMember(Long id) {
@@ -211,5 +273,10 @@ public class IntakeHistoryService {
     private Member getMember(Long id) {
         return memberRepository.findById(id)
                 .orElseThrow(() -> new CommonException(NOT_FOUND_MEMBER));
+    }
+
+    private Cup getCup(Long id) {
+        return cupRepository.findById(id)
+                .orElseThrow(() -> new CommonException(NOT_FOUND_CUP));
     }
 }
